--- a/DS_01.ipynb
+++ b/DS_01.ipynb
@@ -118,7 +118,11 @@
         "\n",
         "x-axis represents the likes of the video\n",
         "\n",
-        "lets take the data of a single user and how machine looks at the data."
+        "lets take the data of a single user and how machine looks at the data.",
+        "\n",
+        "Lets plot the red dots and consider them as the videos liked by the user and plot the purple dots as videos disliked by a user.",
+        "\n",
+        "Now if you click Train model the display shows how the machine looks at the data points after its being taught how to learn them. The options on the right side are the model on which we train our machine to learn"
       ],
       "metadata": {
         "id": "PaGM6ju3pMYB"
