--- a/DS_07_Python_If_Else.ipynb
+++ b/DS_07_Python_If_Else.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVYgZzNNCY7j8vKVBwqwWz",
+      "authorship_tag": "ABX9TyM3eX12OqcwO44SQSsKgVOW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,11 +436,18 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "num = 10\n",
+        "if (num < 0): print(\"Number is smaller than Zero\")\n",
+        "elif (num > 0): print(\"Number is greater than Zero\")\n",
+        "else: print(\"Number is Zero\")"
+      ],
       "metadata": {
-        "id": "1tTwtnKTDnMD"
-      }
+        "id": "i_NNpDCQF7Eq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
