--- a/DS_07_Python_If_Else.ipynb
+++ b/DS_07_Python_If_Else.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3eX12OqcwO44SQSsKgVOW",
+      "authorship_tag": "ABX9TyNFue0wJ1QfuF/YuHQjUWO/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,6 +380,27 @@
       ],
       "metadata": {
         "id": "KGY-OHz0Da4Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The ternary operator\n",
+        "The ternary operator evaluates the condition. If the result is True, it returns the value_if_true. Otherwise, it returns the value_if_false."
+      ],
+      "metadata": {
+        "id": "1Dz6ObadH-Yj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "value_if_true if condition else value_if_false"
+      ],
+      "metadata": {
+        "id": "rLdsaLuaH8ur"
       },
       "execution_count": null,
       "outputs": []
