--- a/DS_01.ipynb
+++ b/DS_01.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMF0Ip6dpafVO4vZBGCO37w",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/santhosh47/Data_Science_and_ML_Tutorial/blob/main/DS_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -63,6 +75,11 @@
         "\n",
         "## What is AI?\n",
         "AI is just machine trying to become human. I am not kidding that is the general simplistic defenition of an AI. So we already have created a brain and even helped it to learn so both machine learning and Deep Learning comes under the unbrella of AI.\n",
+        "\n",
+        "## What is Data Analysis?\n",
+        "\n",
+        "Before data can be used to tell a story, it must be run through a process that makes it usable in the story. Data analysis is the process of identifying, cleaning, transforming, and modeling data to discover meaningful and useful information. The data is then crafted into a story through reports for analysis to support the critical decision-making process.\n",
+        "\n",
         "\n",
         "\n",
         "## What is Data Analytics?\n",
@@ -118,11 +135,7 @@
         "\n",
         "x-axis represents the likes of the video\n",
         "\n",
-        "lets take the data of a single user and how machine looks at the data.",
-        "\n",
-        "Lets plot the red dots and consider them as the videos liked by the user and plot the purple dots as videos disliked by a user.",
-        "\n",
-        "Now if you click Train model the display shows how the machine looks at the data points after its being taught how to learn them. The options on the right side are the model on which we train our machine to learn"
+        "lets take the data of a single user and how machine looks at the data."
       ],
       "metadata": {
         "id": "PaGM6ju3pMYB"
