--- a/DS_10_Pandas_Intro.ipynb
+++ b/DS_10_Pandas_Intro.ipynb
@@ -8147,7 +8147,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Learn more about EDA and Data Wrangling/mungling techniques here :\n",
+        "*  https://www.kdnuggets.com/2017/06/7-steps-mastering-data-preparation-python.html\n",
+        "\n",
+        "* https://www.analyticsvidhya.com/blog/2016/01/complete-tutorial-learn-data-science-python-scratch-2/"
+      ],
       "metadata": {
         "id": "0yGZE-1A0_2N"
       }
