--- a/DS_33_P_value.ipynb
+++ b/DS_33_P_value.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQa+TMl9DSW1F/nP80xKT2",
+      "authorship_tag": "ABX9TyNAanwusrT+O0Of53u4Dxf0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,12 +69,13 @@
         "\n",
         "Thus, we round up\n",
         "to the closest value available and get 0.0001.\n",
-        "Wait, but how do we actually test the hypothesis?\n",
+        "\n",
+        "**Wait, but how do we actually test the hypothesis?**\n",
+        "\n",
         "Well, after choosing a significance level of alpha\n",
         "you compare the P value to it.\n",
         "\n",
-        "You should reject the null hypothesis\n",
-        "if the P value is lower than the significance level.\n",
+        "**You should reject the null hypothesis if the P value is lower than the significance level.**\n",
         "Therefore, we can safely say\n",
         "that such a result is extremely significant\n",
         "by any measurement of significance.\n",
