--- a/DS_64_sklearn+-+Linear+Regression+-+Practical+Example+(Part+2)_with_comments.ipynb
+++ b/DS_64_sklearn+-+Linear+Regression+-+Practical+Example+(Part+2)_with_comments.ipynb
@@ -2775,11 +2775,27 @@
     "# So even if EngineV seems with a high VIF, too, once 'Year' is gone that will no longer be the case\n",
     "data_no_multicollinearity = data_cleaned.drop(['Year'],axis=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A Note on Multicollinearity\n",
+    "What most people are wondering is not 'when do we have multicollinearity' as we usually do have some.\n",
+    "\n",
+    "The better question to ask is 'When can we safely ignore multicollinearity'.\n",
+    "\n",
+    "Here's a great article on the topic: http://statisticalhorizons.com/multicollinearity\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Regarding the variance inflation factor method that we employed from StatsModels, you can read the full documentation here: https://www.statsmodels.org/stable/generated/statsmodels.stats.outliers_influence.variance_inflation_factor.html"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2793,7 +2809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
