--- a/DS_77_Calculating_Accuracy.ipynb
+++ b/DS_77_Calculating_Accuracy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,11 @@
     "import statsmodels.api as sm\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "#Apply a fix to the statsmodels library\n",
+    "from scipy import stats\n",
+    "stats.chisqprob = lambda chisq, df: stats.chi2.sf(chisq, df)"
    ]
   },
   {
@@ -30,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +154,7 @@
        "[168 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -282,13 +286,13 @@
        "[168 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = raw_data.copy()\n",
+    "data = raw_data\n",
     "data['Admitted'] = data['Admitted'].map({'Yes': 1, 'No': 0})\n",
     "data['Gender'] = data['Gender'].map({'Female': 1, 'Male': 0})\n",
     "data"
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,8 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -350,7 +356,7 @@
        "  <th>Date:</th>            <td>Tue, 27 Dec 2022</td> <th>  Pseudo R-squ.:     </th>  <td>0.8249</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>08:14:45</td>     <th>  Log-Likelihood:    </th> <td> -20.180</td> \n",
+       "  <th>Time:</th>                <td>08:37:52</td>     <th>  Log-Likelihood:    </th> <td> -20.180</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -115.26</td> \n",
@@ -383,7 +389,7 @@
        "Model:                          Logit   Df Residuals:                      165\n",
        "Method:                           MLE   Df Model:                            2\n",
        "Date:                Tue, 27 Dec 2022   Pseudo R-squ.:                  0.8249\n",
-       "Time:                        08:14:45   Log-Likelihood:                -20.180\n",
+       "Time:                        08:37:52   Log-Likelihood:                -20.180\n",
        "converged:                       True   LL-Null:                       -115.26\n",
        "Covariance Type:            nonrobust   LLR p-value:                 5.118e-42\n",
        "==============================================================================\n",
@@ -400,7 +406,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,13 +415,16 @@
     "x = sm.add_constant(x1)\n",
     "reg_log = sm.Logit(y,x)\n",
     "results_log = reg_log.fit()\n",
+    "# Get the regression summary\n",
     "results_log.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -423,13 +432,183 @@
        "6.992932526814459"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.exp(1.9449)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00, 1.00, 1.00, 0.23, 0.02, 0.99, 1.00, 1.00, 1.00, 0.01, 1.00,\n",
+       "       1.00, 0.76, 0.00, 0.60, 1.00, 0.11, 0.12, 0.51, 1.00, 1.00, 1.00,\n",
+       "       0.00, 0.01, 0.97, 1.00, 0.48, 0.99, 1.00, 0.99, 0.00, 0.83, 0.25,\n",
+       "       1.00, 1.00, 1.00, 0.31, 1.00, 0.23, 0.00, 0.02, 0.45, 1.00, 0.00,\n",
+       "       0.99, 0.00, 0.99, 0.00, 0.00, 0.01, 0.00, 1.00, 0.92, 0.02, 1.00,\n",
+       "       0.00, 0.37, 0.98, 0.12, 1.00, 0.00, 0.78, 1.00, 1.00, 0.98, 0.00,\n",
+       "       0.00, 0.00, 1.00, 0.00, 0.78, 0.12, 0.00, 0.99, 1.00, 1.00, 0.00,\n",
+       "       0.30, 1.00, 1.00, 0.00, 1.00, 1.00, 0.85, 1.00, 1.00, 0.00, 1.00,\n",
+       "       1.00, 0.89, 0.83, 0.00, 0.98, 0.97, 0.00, 1.00, 1.00, 0.03, 0.99,\n",
+       "       0.96, 1.00, 0.00, 1.00, 0.01, 0.01, 1.00, 1.00, 1.00, 0.00, 0.00,\n",
+       "       0.02, 0.33, 0.00, 1.00, 0.09, 0.00, 0.97, 0.00, 0.75, 1.00, 1.00,\n",
+       "       0.01, 0.01, 0.00, 1.00, 0.00, 0.99, 0.57, 0.54, 0.87, 0.83, 0.00,\n",
+       "       1.00, 0.00, 0.00, 0.00, 1.00, 0.04, 0.00, 0.01, 1.00, 0.99, 0.52,\n",
+       "       1.00, 1.00, 0.05, 0.00, 0.00, 0.00, 0.68, 1.00, 1.00, 1.00, 1.00,\n",
+       "       1.00, 0.00, 1.00, 1.00, 0.04, 1.00, 0.02, 1.00, 0.99, 0.97, 0.94,\n",
+       "       0.01, 0.00, 0.00])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is a method to change the formatting of np arrays\n",
+    "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)})\n",
+    "# Should you want to go back to the default formatting, uncomment and execute the line below\n",
+    "#np.set_printoptions(formatter=None)\n",
+    "results_log.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An array containing the TRUE (actual) values\n",
+    "np.array(data['Admitted'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[69.00, 5.00],\n",
+       "       [4.00, 90.00]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A prediction table (confusion matrix) showing the \n",
+    "results_log.pred_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0         69.0          5.0\n",
+       "Actual 1          4.0         90.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Some neat formatting to read the table (better when seeing it for the first time)\n",
+    "cm_df = pd.DataFrame(results_log.pred_table())\n",
+    "cm_df.columns = ['Predicted 0','Predicted 1']\n",
+    "cm_df = cm_df.rename(index={0: 'Actual 0',1:'Actual 1'})\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9464285714285714"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an array (so it is easier to calculate the accuracy)\n",
+    "cm = np.array(cm_df)\n",
+    "# Calculate the accuracy of the model\n",
+    "accuracy_train = (cm[0,0]+cm[1,1])/cm.sum()\n",
+    "accuracy_train"
    ]
   },
   {
